--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,12 +16,12 @@
         <div class="collapse navbar-collapse scrollspy" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li><a class="scroll" href="#top">Home</a></li>
-                <li><a class="scroll" href="#about">About</a></li>
-                <li><a class="scroll" href="#treatments">Treatments</a></li>
-                <li><a class="scroll" href="#team">Team</a></li>
-                <li><a class="scroll" href="#testimonials">Testimonials</a></li>
-                <li><a class="scroll" href="#gallery">Gallery</a></li>
-                <li><a class="scroll" href="#location">Location</a></li>
+                <li><a class="scroll" href="#about">A propos</a></li>
+                <li><a class="scroll" href="#treatments">Traitements</a></li>
+                <!--<li><a class="scroll" href="#team">Team</a></li>
+                <li><a class="scroll" href="#testimonials">Testimonials</a></li>-->
+                <li><a class="scroll" href="#location">Localisation</a></li>
+                <li><a class="scroll" href="#gallery">Gallerie</a></li>
             </ul>
         </div>
     </div>
