--- a/css/main.css
+++ b/css/main.css
@@ -8333,6 +8333,16 @@ strong {
     background: #fff
 }
 
+body {
+    padding-top: 40px;
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        padding-top: 0px;
+    }
+}
+
 .main-footer {
     color: #fff;
     background: #40b4ba;
