--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,8 +20,13 @@
                 <li><a class="scroll" href="#treatments">Traitements</a></li>
                 <li><a class="scroll" href="#location">Localisation</a></li>
                 <li><a class="scroll" href="#gallery">Gallerie</a></li>
+                <li><a class="scroll" href="#timeline">Historique</a></li>
             </ul>
         </div>
     </div>
 </nav>
+<!-- Timeline related -->
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/style.css">
+<script src="js/modernizr.js"></script>
 <!-- End Header -->
