--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
     </div>
 </nav>
 <!-- Timeline related -->
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/style.css">
+<!--<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/style.css">-->
 <script src="js/modernizr.js"></script>
 <!-- End Header -->
