modfied header for timeline

--- a/_includes/doctype-head.html
+++ b/_includes/doctype-head.html
@@ -22,4 +22,8 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ "/favicon.png" | prepend: site.baseurl }}">
+    <!-- Timeline related -->
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/modernizr.js"></script>
 </head>
