--- a/_includes/doctype-head.html
+++ b/_includes/doctype-head.html
@@ -15,15 +15,15 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-
+    <!-- Timeline related -->
+    <link rel="stylesheet" href="{{ "/css/reset.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Nunito:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic' rel='stylesheet' type='text/css'>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ "/favicon.png" | prepend: site.baseurl }}">
-    <!-- Timeline related -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+   <!-- Timeline related -->
     <script src="js/modernizr.js"></script>
 </head>
