--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!--<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>-->
     <script src="{{ site.baseurl }}/js/all.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{{ site.baseurl }}/js/main.js"></script>
 </body>
 </html>
