--- a/_includes/doctype-head.html
+++ b/_includes/doctype-head.html
@@ -13,11 +13,14 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
 
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    <!-- Timeline related -->
+    <!-- Start Timeline related -->
     <link rel="stylesheet" href="{{ "/css/reset.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
+    <!-- End Timeline related -->
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Nunito:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic' rel='stylesheet' type='text/css'>
