--- a/css/main.css
+++ b/css/main.css
@@ -2017,6 +2017,12 @@ pre code {
     padding-right: 15px
 }
 
+.container-map {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 0px;
+    padding-right: 0px
+}
 .container-fluid:before,
 .container-fluid:after {
     content: " ";
@@ -2024,6 +2030,16 @@ pre code {
 }
 
 .container-fluid:after {
+    clear: both
+}
+
+.container-map:before,
+.container-map:after {
+    content: " ";
+    display: table
+}
+
+.container-map:after {
     clear: both
 }
 
