--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
                 <li><a class="scroll" href="#top">Home</a></li>
                 <li><a class="scroll" href="#about">A propos</a></li>
                 <li><a class="scroll" href="#treatments">Traitements</a></li>
-                <li><a class="scroll" href="#location">Localisation</a></li>
+                <li><a class="scroll" href="#loc">Localisation</a></li>
                 <li><a class="scroll" href="#gallery">Gallerie</a></li>
                 <li><a class="scroll" href="#timeline">Historique</a></li>
             </ul>
