put back the home ref in the nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse scrollspy" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a class="scroll" href="#about">Home</a></li>
+                <li><a class="scroll" href="#">Home</a></li>
                 <li><a class="scroll" href="#about">A propos</a></li>
                 <li><a class="scroll" href="#treatments">Traitements</a></li>
                 <li><a class="scroll" href="#loc">Localisation</a></li>
