--- a/_includes/doctype-head.html
+++ b/_includes/doctype-head.html
@@ -29,4 +29,6 @@
     <link rel="shortcut icon" href="{{ "/favicon.png" | prepend: site.baseurl }}">
    <!-- Timeline related -->
     <script src="js/modernizr.js"></script>
+    <!-- adSense -->
+    <script data-ad-client="ca-pub-7595299723166322" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
