--- a/_includes/doctype-head.html
+++ b/_includes/doctype-head.html
@@ -31,4 +31,14 @@
     <script src="js/modernizr.js"></script>
     <!-- adSense -->
     <script data-ad-client="ca-pub-7595299723166322" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165469268-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-165469268-1');
+    </script>
 </head>
